--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
 </head>
 
 <body class="body">
+  <div class="container">
+   <div class="box-1">
   <header class="navfundo">
     <a href="index.html" class="linkhome logo"><img src="assets/img/LOGO.png" width="60" height="63,5" class="logo">
     <h1 class="nomedosite">HoloBlog</h1></a>
-    <nav class="menunav">
+    <div class="box-2">
+    <nav class="menunav ">
       <ul class="links__list">
         <li class="itemnav"><a href="pages/noticias.html">Notícias</a></li>
         <li class="itemnav"><a href="pages/criticas.html">Críticas</a> </li>
@@ -30,7 +33,10 @@
         <li class="itemnav"><a href="pages/contato.html">Contato</a></li>
       </ul>
     </nav>
+  </div>
   </header>
+</div>
+<div class="box-3">
   <section class="destaques">
     <div class="row">
       <div class="card__destaque">
@@ -54,7 +60,7 @@
           <p class="card__description">Estrelada por Ewan McGregor, Obi-Wan Kenobi (2022) chegou ao Disney+ em 27 de
             maio — e já bateu recorde. Nesta terça, 31, o streaming revelou que a série foi a produção original Disney+
             mais assistida em seu fim de semana de estreia.
-            <br><a><input type="button" class="btn" value="Ler mais"></a>
+            <br><a><button value="Ler mais"></a>
         </article>
       </div>
       <div class="card">
@@ -65,7 +71,7 @@
 
           <p class="card__description">Se Obi-Wan Kenobi estreou na semana passada mostrando a rotina do personagem de
             Ewan McGregor em seu exílio em Tatooine, o terceiro episódio...
-            <br><a><input type="button" class="btn" value="Ler mais"></a>
+            <br><a><button value="Ler mais"></a>
         </article>
       </div>
       <div class="card">
@@ -76,10 +82,12 @@
 
           <p class="card__description">Ahsoka Tano apareceu pela primeira vez no universo Star Wars em The Clone Wars,
             no entanto, a personagem ainda fez aparições importantes...
-            <br><a><input type="button" class="btn" value="Ler mais"></a>
+            <br><a><button value="Ler mais"></a>
         </article>
       </div>
     </div>
+  </div>
+</div>
 </body>
 
 </html>
